# rules_synology

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  .pre-commit-config.yaml  404.html  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  bazel-rules_synology  defs.bzl  deps.bzl  go.mod  go.sum  go_deps.bzl  index.html  mkdocs.yml  release-please-config.json  sitemap.xml
.bcr/: metadata.template.json  source.template.json
.github/: cspell.yaml  mkdocs.yml  release-please-config.json  renovate.json
.github/workflows/: automerge.yaml  automerge.yml  bazel.yaml  bazel.yml  confirm-migrations.yaml  publish-docs.yml  release.yaml
arch/: BUILD.bazel
bzl/: go_dependencies.bzl
config/: BUILD.bazel  platforms.bzl
doc/: BUILD.bazel
docs/: README.md  docs.md  glossary.md  index.html  index.md
dsm/: BUILD.bazel  dsm.bzl
examples/: BUILD.bazel  README.md
examples/cross-foreign-cc/: BUILD.bazel  BUILD.dnsmasq.bazel  MODULE.bazel  README.md  dnsmasq.d.conf  postinst
examples/cross-helloworld/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  confirm-cross-selection.bash  main.cc
examples/cross-helloworld-no-go/: .bazelrc  BUILD.bazel  MODULE.bazel  confirm-cross-selection.bash
examples/cross-helloworld-no-go/bzl/patches/: chickenandpork-i686-mostly-acts-like-x86_64.patch
examples/example-aliased-dependency/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
examples/example-aliased-dependency/tests/: BUILD.bazel
examples/example-docker-project/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
examples/example-docker-project/spk/nginx/: BUILD.bazel  dc.yaml
examples/example-docker-project/tests/: BUILD.bazel
examples/example-kernelmod-spk/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
examples/example-kernelmod-spk/maintainers/: BUILD.bazel
examples/example-kernelmod-spk/spk/netfilter-mods/: BUILD.bazel  Dockerfile.fenio  NOTES  contbuild  k3s_install.patch  run-install.sh
examples/example-kernelmod-spk/tests/: BUILD.bazel
examples/example-server/: .bazelrc  .bazelversion  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  bazel-example-server  go.mod  go.sum
examples/example-server/api/: BUILD.bazel  helloworld.proto
examples/example-server/bzl/: go_dependencies.bzl
examples/example-server/server/: BUILD.bazel  health.go  main.go
examples/example-server/spk/exampleserver/: BUILD.bazel
examples/example-server/tests/: BUILD.bazel
glossary/: index.html
models/: BUILD.bazel
patches/: BUILD.bazel  WORKSPACE  rules_pkg-0.9.1.patch
platform/: BUILD.bazel
search/: search_index.json
synology/: BUILD.bazel  data-share.bzl  defs.bzl  docker-project.bzl  images.bzl  info-file.bzl  infofile_test.bzl  maintainer.bzl  port-service-configure.bzl  privilege-configure.bzl  resource-configure.bzl  start-stop-template.bzl  start_stop_template_simple.tpl  systemd-user-unit.bzl  unittests.bzl  usr-local-linker.bzl
toolchains/: BUILD.bazel  arm64_gcc_linux_x86_64.BUILD  armada37xx-gcc850_glibc226_armv8-GPL.BUILD  denverton-gcc850_glibc226_x86_64-GPL.BUILD  deps.bzl  extensions.bzl  geminilake-gcc850_glibc226_x86_64-GPL.BUILD  toolchains.bzl
toolchains/bazelisk/: BUILD.bazel  deps.bzl  name-version-sha.bzl
tools/: BUILD.bazel  confirm-cross-selection.bash  gazelle-examples.sh  main.go  resize.go
tools/dockcross-linux-x86-bazel/: Dockerfile
tools/ubuntu-22.04/: Dockerfile  README.md  bazelrc
unittests/: BUILD.bazel
unittests/info-file/: BUILD.bazel
unittests/info_file/: BUILD.bazel
unittests/resources/: BUILD.bazel
