load("@gazelle//:def.bzl", "gazelle")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

exports_files(["defs.bzl"])

# gazelle:prefix github.com/chickenandpork/rules_synology

gazelle(
    name = "gazelle",
    prefix = "github.com/chickenandpork/rules_synology",
)

stardoc(
    name = "docs",
    out = "docs.md",
    input = "defs.bzl",
    table_of_contents_template = "@stardoc//stardoc:templates/markdown_tables/table_of_contents.vm",
    visibility = ["//visibility:public"],
    deps = ["//synology:docs"],
)

# This target collects all of the parent workspace files needed by the child workspaces.
filegroup(
    name = "local_repository_files",
    # Include every package that is required by the child workspaces.
    srcs = [
        "BUILD.bazel",
        "MODULE.bazel",
        "defs.bzl",
        "go.mod",
        "go.sum",
        "//arch:all_files",
        "//config:all_files",
        "//dsm:all_files",
        "//models:all_files",
        "//platform:all_files",
        "//synology:all_files",
        "//toolchains:all_files",
        "//tools:all_files",
        "//unittests:all_files",
    ],
    visibility = ["//:__subpackages__"],
)
