load("//:synology/defs.bzl", "images", "info_file", "maintainer", "service_config", "protocol_file", "resource_config")

info_file(
    name = "xxinfo",
    package_name = "xx",
    description = "X after X after X",
    maintainer = ":bart",
    os_min_ver = "7.0",
    package_version = "1.2.3-435",
)

service_config(name="xx-main",title="XX service port",description="XX service",dst_ports = "1337/tcp")
service_config(name="xx-admin",title="XX admin port",description="XX admin",dst_ports = "9090/tcp")

protocol_file(name="file", package_name="xx",service_config = [":xx-main", "xx-admin"])
protocol_file(name="file2", out="bob.sc",service_config = [":xx-main", "xx-admin"])

resource_config(name="rez", resources= [ ":file"])

# Create icon images
images(
    name = "icons",
    src = "@screaming_goat//file",
)

maintainer(
    name = "bart",
    maintainer_name = "Bart Bloggins",
    maintainer_url = "http://geocites.com/the-bartman",
)
