load("@rules_synology//config:platforms.bzl", "PLATFORMS")

constraint_setting(
    name = "synology_model",
)

# to check available models: bazel query 'kind("platform", @rules_synology//models/...)'
[platform(
    name = k,
    constraint_values = [
        "@rules_synology//arch:{}".format(v["synoarch"]),
        "@platforms//cpu:{}".format(v["cpu"]),
        "@platforms//os:{}".format(v["os"]),
        "@rules_synology//dsm:{}".format(".".join(v["version"].split(".")[:2])),
    ],
) for k, v in PLATFORMS.items()]
