load("@rules_synology//config:platforms.bzl", "PLATFORMS")

# This BUILD file is simply a namespace separation so that we can show "//models:ds224+" as
# something that makes sense to more Synology people than bog-standard Bazel people.
#
# DO NOT create new targets in the directory; it's a namespace only
#
# All changes are made in the config/platforms.bzl file

constraint_setting(
    name = "synology_model",
)

# to check available models: bazel query 'kind("alias", @rules_synology//models/...)'
[alias(
    # like "ds1819+-7.1"
    name = "{}-{}".format(k, ".".join(".".join(v["version"].split("-")[:1]).split(".")[:2])),
    actual = "//platform:{}-{}".format(v["synoarch"], ".".join(".".join(v["version"].split("-")[:1]).split(".")[:2])),
) for k, v in PLATFORMS.items()]

filegroup(
    name = "all_models",
    srcs = [
        "{}-{}".format(k, ".".join(".".join(v["version"].split("-")[:1]).split(".")[:2])) for k, v in PLATFORMS.items()
    ],
)
