toolchain(
    name = "arm64_gcc_linux_x86_64",
    # registered in //toolchains:deps.bzl imported by //:deps.bzl
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//cpu:arm64",
    ],
    toolchain = "@arm64_gcc_linux_x86_64//:cc_toolchain",
    toolchain_type = "@rules_cc//cc:toolchain_type",
)

platform(
    name = "toolchain_arm64_gcc",
    constraint_values = [
        "@platforms//cpu:arm64",
    ],
)

toolchain(
    name = "armada37xx-gcc850_glibc226_armv8-GPL",
    # registered in //toolchains:deps.bzl imported by //:deps.bzl
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "//arch:armada37xx",
        "//dsm:7.1",
    ],
    toolchain = "@armada37xx-gcc850_glibc226_armv8-GPL//:cc_toolchain",
    toolchain_type = "@rules_cc//cc:toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "denverton-gcc850_glibc226_x86_64-GPL",
    # registered in //toolchains:deps.bzl imported by //:deps.bzl
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "//arch:denverton",
        "//dsm:7.1",
    ],
    toolchain = "@denverton-gcc850_glibc226_x86_64-GPL//:cc_toolchain",
    toolchain_type = "@rules_cc//cc:toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "geminilake-gcc850_glibc226_x86_64-GPL",
    # registered in //toolchains:deps.bzl imported by //:deps.bzl
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "//arch:geminilake",
        "//dsm:7.1",
    ],
    toolchain = "@geminilake-gcc850_glibc226_x86_64-GPL//:cc_toolchain",
    toolchain_type = "@rules_cc//cc:toolchain_type",
)

filegroup(
    name = "all_toolchains",
    srcs = [
        ":armada37xx-gcc850_glibc226_armv8-GPL",
        ":denverton-gcc850_glibc226_x86_64-GPL",
        ":geminilake-gcc850_glibc226_x86_64-GPL",
    ],
)

# TL;DR: needed for `bazel test //examples:all_integration_tests`
#
# For Integration Tests -- rules_bazel_integration_test -- every child workspace (ie every example
# that exercises the rules) needs to refer to all the files of the ruleset.  For this reason, we
# have this rule collecting all the files in this "package" for collection at Workspace in
# //:local_repository_files to be passed to the workspace of the child workspace (test example) in
# //examples:BUILD.bazel,
#
# ```
# bazel_integration_test( workspace_files = ...  "//:local_repository_files", ], ... )
# ````
filegroup(
    name = "all_files",
    srcs = glob(["*"]),  # TODO: *.bzl BUILD.bazel
    visibility = ["//:__subpackages__"],
)
